<resources>
    <string name="app_name">Android E Book</string>
    <string name="app_sub_name">This is my-book app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="play_more_app">https://play.google.com/store/search?q=movie</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="favorites">Favorite</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="toolbar_Title_AllComment">All Comments</string>

    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="cannot_use_save_permission">Can not use Share futcher</string>
    <string name="exit">Exit</string>

    <string name="no_data">No Data</string>
    <string name="main_activity">Main Activity Android E Book</string>

    <!--<about_us.xml string>-->
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">2.1.5(1020)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">Viavi Webtech</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@viaviweb.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.viaviweb.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <!--<about_us.xml string>-->

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="add_to_favourite">Add To Favourite</string>
    <string name="remove_to_favourite">Remove To Favourite</string>

    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_register">REGISTER</string>
    <string name="button_text_forgot_password">FORGOT PASSWORS ?</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_name">please enetr name</string>
    <string name="latest_book">Latest Book</string>
    <string name="latest_youve_recently_read">Books which are newly added</string>
    <string name="button_viewall_home">View All</string>
    <string name="top_100_for_your_autor">Top 100 For Your Author</string>
    <string name="popular_books">Popular Book</string>
    <string name="stories_youve_recently_read">Books which have been read most</string>
    <string name="view_details">View Details</string>
    <string name="view">View</string>
    <string name="text">4.5</string>
    <string name="profile">Profile</string>
    <string name="name_profile">Name :-</string>
    <string name="email_profile">Email :-</string>
    <string name="password_profile">Password :-</string>
    <string name="confirm_password_profile">confirm Password :-</string>
    <string name="phone_profile">Phone :-</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Success Full Save Profile</string>
    <string name="button_text_skip">Skip</string>
    <string name="view_number">125K</string>
    <string name="password_and_confirmpassword_does_not_match">Password and confirm password does not match</string>
    <string name="ok">ok</string>
    <string name="date">12 Jan 2018</string>
    <string name="description">Description :-</string>
    <string name="related_books">Related Books</string>
    <string name="stories_youve_related_read_books">Stories you\'ve related read books</string>
    <string name="button_view_all_scd">View all</string>
    <string name="comments">Comments:-</string>
    <string name="login_failed">Login Failed</string>
    <string name="items_string_category_adapter">items</string>
    <string name="textView_forget_password">Forget password</string>
    <string name="not_found_relatedBook">Not Found Related Book</string>
    <string name="no_comment_found">No Comment Found</string>
    <string name="please_install_browser">Please install google drive</string>
    <string name="please_install_browser_else_pdf_viewer">Please install google drive else pdf viewer</string>
    <string name="downloading">Downloading</string>
    <string name="pdf_reader_notinstall">Pdf reader not install</string>
    <string name="delete">delete</string>
    <string name="menu_favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="read_book">Read Book</string>
    <string name="download_book">Download Book</string>
    <string name="you_have_allready_download_book">You have all ready down load this book</string>
    <string name="Today">Today</string>
    <string name="raing">Rating.....</string>
    <string name="thanks_for_rating">Thanks for rating</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="please_enter_comment">Please Enter Comment</string>
    <string name="login">Login</string>
    <string name="iteam">Iteam</string>
    <string name="loading">Loading..</string>

</resources>
