<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/raing"
            android:textColor="@color/textView_dialogbox_comment"
            android:textSize="18sp" />

    </RelativeLayout>


    <RatingBar
        android:id="@+id/ratingBar_dialogbox_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/thanks_for_rating"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/button_dialogBox_rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_dialogbox_comment"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/submit"
            android:textColor="@color/textView_dialogbox_comment" />

    </LinearLayout>

</LinearLayout>