<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_us_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_about_us">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/app_logo_about_us"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/app_name"
                            android:src="@mipmap/icon" />

                        <TextView
                            android:id="@+id/textView_app_name_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/app_name_about_us"
                            android:textColor="@color/about_us_Text"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/Verson"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="6dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_version" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_TitleVersion_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_version"
                                android:textColor="@color/about_us_Text"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_app_version_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/about_us_version_text"
                                android:textColor="@color/about_us_SubText" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView_TitleAuthore_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_author"
                            android:textColor="@color/about_us_Text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="4dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_user" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginStart="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_TitleCompany_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_us_Company"
                                    android:textColor="@color/about_us_Text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView_app_author_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="1dp"
                                    android:text="@string/about_us_company_name"
                                    android:textColor="@color/about_us_SubText" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="4dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_email" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginStart="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_TitleEmail_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_us_email"
                                    android:textColor="@color/about_us_Text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView_app_email_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="1dp"
                                    android:text="@string/about_us_email_text"
                                    android:textColor="@color/about_us_SubText" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="4dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_web" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginStart="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_TitleWebsite_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_us_website"
                                    android:textColor="@color/about_us_Text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView_app_website_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="1dp"
                                    android:text="@string/about_us_website_text"
                                    android:textColor="@color/about_us_SubText" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="4dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_call" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginStart="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_TitleContact_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_us_contact"
                                    android:textColor="@color/about_us_Text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView_app_contact_about_us"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="1dp"
                                    android:text="@string/about_us_contact_text"
                                    android:textColor="@color/about_us_SubText" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView_TitleAbout_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/about_us_about"
                        android:textColor="@color/about_us_Text"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_app_description_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="15dp"
                        android:lineSpacingExtra="7dp"
                        android:text="@string/lorem"
                        android:textColor="@color/about_us_SubText" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
