<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:id="@+id/relativeLayout_comment_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_comment_adapter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/imageView_boder_profile"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/linearLayout_description_comment_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView_comment_adapter"
            android:layout_toRightOf="@+id/imageView_comment_adapter"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_userName_comment_adapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/textView_date_comment_adapter"
                    android:layout_toStartOf="@+id/textView_date_comment_adapter"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/app_sub_name"
                    android:textColor="@color/textView_userName_comment_adapter"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_date_comment_adapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/date"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView_comment_adapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/lorem" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout_comment_adapter"
        android:layout_marginTop="10dp"
        android:background="@color/view_scd" />

</RelativeLayout>